added markdown lab

--- a/topic02/book-markdown-lab/01.01.md
+++ b/topic02/book-markdown-lab/01.01.md
@@ -1,6 +1,6 @@
 ##Markdown
 
-Markdown allows you to write in a simplistic syntax with the thought that it will eventually be translated to HTML. Of course, this conversion requires some intervention. It’s possible to run some command line tools to help you parse your Markdown, but the easier track these days is to use one of the many, many applications available to write your Markdown. That’s what we’re discussing in this article — our favorite Markdown writing application.
+Markdown allows you to write in a simplistic syntax that can be converted to HTML and several other formats. Markdown is often used to author readme files, for writing messages in online discussion forums, and to create "rich text" using a plain text editor.
 
 ##Online Tutorial
 
@@ -15,5 +15,5 @@ For **Mac** users, this [review](http://www.slant.co/topics/899/~markdown-editor
 
 ##Exercise: Markdown and Github
 GitHub combines a syntax for formatting text called GitHub Flavoured Markdown with a few unique writing features. 
-In one of the first steps of the GIT-IT tutorial you created a README.md. Update this file using suitable markdown syntax with the following [example](./exmaple.md).
+In one of the first steps of the GIT-IT tutorial you created a README.md. Update this file using suitable markdown syntax with the following [example](./pages/example.html).
 
